// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Automations API poll does not poll when request lacks a token 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "INVALID_JWT",
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Invalid token: No token found in URL",
      "property": null,
      "type": "UnauthorizedError",
    },
  ],
}
`;

exports[`Automations API poll does not poll when request lacks a token 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "235",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Automations API poll does not poll when request token is invalid 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "INVALID_JWT",
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Invalid token: jwt audience invalid. expected: /\\\\/?admin\\\\/?$/",
      "property": null,
      "type": "UnauthorizedError",
    },
  ],
}
`;

exports[`Automations API poll does not poll when request token is invalid 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "262",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Automations API poll triggers a poll with a valid scheduler integration token 1: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin",
  "x-powered-by": "Express",
}
`;

exports[`Automations API read returns a placeholder automation for the requested id 1: [body] 1`] = `
Object {
  "automations": Array [
    Object {
      "actions": Array [
        Object {
          "data": Object {
            "delay_hours": 24,
          },
          "id": "67f3f3f3f3f3f3f3f3f3f3f4",
          "type": "delay",
        },
        Object {
          "data": Object {
            "email_design_setting_id": "680000000000000000000001",
            "email_lexical": "{\\"root\\":{\\"children\\":[]}}",
            "email_sender_email": null,
            "email_sender_name": null,
            "email_sender_reply_to": null,
            "email_subject": "Welcome!",
          },
          "id": "67f3f3f3f3f3f3f3f3f3f3f5",
          "type": "send email",
        },
      ],
      "created_at": "2026-05-05T00:00:00.000Z",
      "edges": Array [
        Object {
          "source_action_id": "67f3f3f3f3f3f3f3f3f3f3f4",
          "target_action_id": "67f3f3f3f3f3f3f3f3f3f3f5",
        },
      ],
      "id": "67f3f3f3f3f3f3f3f3f3f3f3",
      "name": "Welcome email",
      "slug": "member-welcome-email-free",
      "status": "active",
      "updated_at": "2026-05-05T00:00:00.000Z",
    },
  ],
}
`;

exports[`Automations API read returns a placeholder automation for the requested id 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "668",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;
